syntax = "proto3";

package payment;

service PaymentService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc CreateSubscriptionOrder (CreateSubscriptionOrderRequest) returns (CreateSubscriptionOrderResponse);
    rpc CreateSubscriptionPayment (CreateSubscriptionPaymentRequest) returns (CreateSubscriptionPaymentResponse);
    /* rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse); */
    rpc PaymentCheck(PaymentCheckRequest) returns (PaymentCheckResponse);
    rpc SubscriptionPaymentCheck(SubscriptionPaymentCheckRequest) returns (SubscriptionPaymentCheckResponse);
}

message CreateOrderRequest {
    int32 amount = 1;
    string currency = 2;
    string userId = 3;
    string productId = 4;
    string customerEmail = 5;
    string customerName = 6;
    string customerNumber = 7;
}

message Notes {
  string productId = 1;
  string userId = 2;
}

/* message CreateOrderResponse {
  string id = 1;                 // UUID (internal order id)
  string userId = 2;             // User who purchased
  string name = 3;
  string email = 4;
  string fileId = 5;             // File/product reference
  string razorpayOrderId = 6;    // Razorpay order ID (order_xxxxxxx)
  double price = 7;              // 299, 500 etc.
  string currency = 8;           // INR, USD etc.
  string entity = 9;             // always "order" from Razorpay
  string receipt = 10;           // custom receipt from Razorpay
  bool paid = 11;                // Whether payment completed or not
  string createdAt = 12; 
} */

message CustomerDetails {
  string contact = 2;
  string emaicl = 3;
  string name = 1;
}

message NotifyInfo {
  bool email=1;
  bool sms=2;
  bool whatsapp=3;
}

message CreateOrderResponse {
  bool acceptPartial = 1;
  int32 amount = 2;
  int32 amountPaid = 3;
  int32 cancelledAt = 4;
  int32 createdAt = 5;
  string currency = 6;
  CustomerDetails customer = 7;
  string description = 8;
  int32 expireBy = 9;
  int32 expiredAt = 10;
  int32 firstMinPartialAmount=11;
  string id=12;
  string notes=13;
  NotifyInfo notify=14;
  string payments=15;
  string referenceId=16;
  bool reminderEnable=17;
  repeated string reminders=18;
  string shortUrl=19;
  string status=20;
  int32 updatedAt=21;
  string upiLink=22;
  bool userId=23;
  bool whatsappLink=24;
}

message CreateSubscriptionOrderRequest {
  int32 amount = 1;
  string currency = 2;
  string userId = 3;
}

message CreateSubscriptionOrderResponse {
  int32 amount = 1;
  string currency = 2;
  string id = 3;
  string receipt = 4;
  string status= 5;
}

message CreateSubscriptionPaymentRequest {
  int32 amount = 1;
  string currency = 2;
  CustomerDetails customer = 3;
}

message CreateSubscriptionPaymentResponse {
  bool acceptPartial = 1;
  int32 amount = 2;
  int32 amountPaid = 3;
  int32 cancelledAt = 4;
  int32 createdAt = 5;
  string currency = 6;
  CustomerDetails customer = 7;
  string description = 8;
  int32 expireBy = 9;
  int32 expiredAt = 10;
  int32 firstMinPartialAmount=11;
  string id=12;
  string notes=13;
  NotifyInfo notify=14;
  string payments=15;
  string referenceId=16;
  bool reminderEnable=17;
  repeated string reminders=18;
  string shortUrl=19;
  string status=20;
  int32 updatedAt=21;
  string upiLink=22;
  bool userId=23;
  bool whatsappLink=24;
}

/* message CreatePaymentRequest {
  int32 amount = 1;
  string currency = 2;
  string description = 3;
  CustomerDetails customer = 4;
  string orderId = 5;
} */

/* message CreatePaymentResponse {
  bool acceptPartial = 1;
  int32 amount = 2;
  int32 amountPaid = 3;
  int32 cancelledAt = 4;
  int32 createdAt = 5;
  string currency = 6;
  CustomerDetails customer = 7;
  string description = 8;
  int32 expireBy = 9;
  int32 expiredAt = 10;
  int32 firstMinPartialAmount=11;
  string id=12;
  string notes=13;
  NotifyInfo notify=14;
  string payments=15;
  string referenceId=16;
  bool reminderEnable=17;
  repeated string reminders=18;
  string shortUrl=19;
  string status=20;
  int32 updatedAt=21;
  string upiLink=22;
  bool userId=23;
  bool whatsappLink=24;
} */

message PaymentCheckRequest {
  string data = 1;
}

message TransactionDetails {
  string rrn = 1;
  string upiTransactionId = 2;
}

message UpiDetails {
  string vpa = 1;
  string flow = 2;
}

message PaymentCheckResponse {
  string id=1;
  string entity=2;
  int32 amount=3;
  string currency=4;
  string status=5;
  string orderId=6;
  string invoiceId=7;
  bool international=8;
  string method=9;
  int32 amountRefunded=10;
  string refundStatus=11;
  bool captured=12;
  string description=13;
  string cardId=14;
  string bank=15;
  string wallet=16;
  string vpa=17;
  string email=18;
  string contact=19;
  repeated string notes=20;
  int32 fee=21;
  int32 tax=22;
  string errorCode=23;
  string errorDescription=24;
  string errorSource=25;
  string errorStep=26;
  string errorReason=27;
  TransactionDetails acquirerData=28;
  int32 createdAt=29;
  UpiDetails upi=30;
}

message SubscriptionPaymentCheckRequest {
  string data = 1;
}

message SubscriptionPaymentCheckResponse {
  string id=1;
  string entity=2;
  int32 amount=3;
  string currency=4;
  string status=5;
  string orderId=6;
  string invoiceId=7;
  bool international=8;
  string method=9;
  int32 amountRefunded=10;
  string refundStatus=11;
  bool captured=12;
  string description=13;
  string cardId=14;
  string bank=15;
  string wallet=16;
  string vpa=17;
  string email=18;
  string contact=19;
  repeated string notes=20;
  int32 fee=21;
  int32 tax=22;
  string errorCode=23;
  string errorDescription=24;
  string errorSource=25;
  string errorStep=26;
  string errorReason=27;
  TransactionDetails acquirerData=28;
  int32 createdAt=29;
  UpiDetails upi=30;
}